# proxy_core

./: .gitignore  .metadata  CHANGELOG.md  PacketTunnelProvider.sample.swift  README.md  ffigen.yaml  pre_run_clean.sh  pubspec.yaml
.github/workflows/: build_ios_proxycorekit.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: fdsan_workaround.c
android/src/main/kotlin/com/mahsanet/proxy_core/: ProxyCoreApplication.kt  ProxyCorePlugin.kt  ProxyCoreVpnService.kt
android/src/main/kotlin/com/mahsanet/proxy_core/enums/: VpnEnums.kt
example/: .gitignore  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/mahsanet/proxy_core_example/: MainActivity.kt
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: main.cpp
ios/: proxy_core.podspec
ios/Classes/: ProxyCorePlugin.swift  ProxyCorePluginImpl.swift  VpnService.swift
lib/: proxy_core.dart
lib/constants/: core_names.dart  grpc_channel_config.dart  vpn_mode_methods.dart
lib/ffi/: ffi.dart
lib/method_channel/: vpn_mode_channel.dart
lib/models/: proxy_core_config.dart  proxy_core_exception.dart
lib/utils/: persistent_notification_service.dart
macos/: .gitignore  proxy_core.podspec
macos/Classes/: EnforceBinding.swift  libproxy_core.h
scripts/: build_android.sh  build_ios_kit.sh  build_mac.sh  build_windows.bat
src/: go.mod  go.sum  libproxy_core.h
src/.android_build/amd64/: libproxy_core.h
src/cmd/: main.go
src/cmd/guardexsvc/: main.go
src/cmd/outline/: main.go  sample_config.json
src/global/: core.go
src/ios/: ios.go
src/liboutline/: liboutline.go  log_android.go  log_default.go  sockopt_unix.go  sockopt_windows.go
src/libtun/: libtun.go  libtun_unix.go  libtun_windows.go
src/libxray/: libxray.go  service.go  utils.go
src/libxray/slog/: log.go  log_android.go  log_default.go
src/middleware/: coreSwitch.go
src/patches/tun2socks/.github/: FUNDING.yml
src/patches/tun2socks/buffer/: pool.go
src/patches/tun2socks/buffer/allocator/: allocator.go
src/patches/tun2socks/core/: nic.go  stack.go  tcp.go  udp.go
src/patches/tun2socks/core/adapter/: adapter.go  handler.go
src/patches/tun2socks/core/device/: device.go
src/patches/tun2socks/core/device/fdbased/: fd_unix.go  open_linux.go  open_unix.go
src/patches/tun2socks/core/device/iobased/: endpoint.go
src/patches/tun2socks/core/device/tun/: tun.go  tun_netstack.go  tun_wireguard.go  tun_wireguard_unix.go  tun_wireguard_windows.go
src/patches/tun2socks/core/option/: option.go
src/patches/tun2socks/dialer/: dialer.go  sockopt_others.go  sockopt_windows.go
src/patches/tun2socks/dns/: resolver.go
src/patches/tun2socks/docker/: entrypoint.sh
src/patches/tun2socks/engine/: engine.go  parse.go  parse_unix.go
src/patches/tun2socks/internal/pool/: pool.go  pool_test.go
src/patches/tun2socks/internal/version/: module.go  version.go
src/patches/tun2socks/log/: emitter.go  level.go  log.go  zap.go
src/patches/tun2socks/metadata/: metadata.go
src/patches/tun2socks/proxy/: http.go  proxy.go  shadowsocks.go  socks5.go  util.go
src/patches/tun2socks/restapi/: debug.go  errors.go  netstats.go  server.go
src/patches/tun2socks/transport/internal/bufferpool/: bufferpool.go
src/patches/tun2socks/transport/shadowsocks/core/: cipher.go
src/patches/tun2socks/transport/shadowsocks/shadowaead/: cipher.go  packet.go  stream.go
src/patches/tun2socks/transport/shadowsocks/shadowstream/: cipher.go  packet.go  stream.go
src/patches/tun2socks/transport/simple-obfs/: http.go  obfs.go  tls.go
src/patches/tun2socks/transport/socks4/: socks4.go
src/patches/tun2socks/transport/socks5/: socks5.go  socks5_test.go
src/patches/tun2socks/tunnel/: addr.go  global.go  tcp.go  tunnel.go  udp.go
src/proto/: ProxyCoreService.proto
src/proxycoreproto/: ProxyCoreService.pb.go  ProxyCoreService_grpc.pb.go
src/server/: server.go
src/service_win/: ipc.go
src/singbox_win/: bridge.go  netutil.go
src/slogger/: slogger.go  slogger_android.go  slogger_default.go
windows/: .gitignore  CMakeLists.txt  libproxy_core.h  proxy_core_plugin.cpp  proxy_core_plugin.h  proxy_core_plugin_c_api.cpp
windows/include/proxy_core/: proxy_core_plugin_c_api.h
